
0.9.9j Mar 14, 2005
 * added CURLOPT_FILETIME to libcurl calls so that ftp transfers have the
   modification date for checking whether the source is new or not (as 
   opposed to the file size).
 * added Slovenian translation by Emil Novak (emilnovak at gmail dot com)
 * added --available option to only show packages available from the current
   sources.  --list shows available and installed. --installed shows only
   the installed with a new output format.

0.9.9i Mar 06, 2005
 * set CURLOPT_HTTPAUTH to CURLAUTH_ANY for NTLM proxy users
 * fixed --remove bug
 * --list now properly shows installed packages
 * installed packages now parse out package location from /var/log/packages entry
 * added add_source() (libslapt)
 * add_deps_to_trans() returns early if passed pkg_info_t is NULL
 * configuration sources now dynamically created instead of static arrays
 * --search return installed packages as well
 * progress_cb for the progress callback is now part of rc_config structure (libslapt)
 * added public add_exclude() to configuration.c (libslapt)
 * init_regex now returns on failure
 * updated translations

0.9.9h Feb 12, 2005
 * removed hardcoded limits REQUIRED_LEN CONFLICTS_LEN SUGGESTS_LEN
 * added search_transaction_by_pkg() to make checks more specific
 * remove package by name-version now possible
 * updated example.slapt-getrc to point to 10.1 sources
 * make sure all dependencies for slapt-get are satisfied during dist-upgrade
 * ensure when removing a package and the packages it requires, the packages
   that are required are installed. thanks NIkkou (nibbana80 at wp dot pl)
 * improved version comparing
 * fixed bug when specifying specific versions of dependencies, thanks NIkkou
    (nibbana80 at wp dot pl)
 * simplified add_deps_to_trans()
 * updated sources in example.slapt-getrc (thanks Piotr Simon)
 * Makefile updates to symlink libslapt-$(VERSION).a to libslapt.a
 * documentation updates

0.9.9g Jan 30, 2005