@@ -1,5 +1,6 @@
 
 0.9.9j Mar 14, 2005
+ * FAQ updates, aslo added "50. What about mirror fall back / fail-over ?"
  * added CURLOPT_FILETIME to libcurl calls so that ftp transfers have the
    modification date for checking whether the source is new or not (as 
    opposed to the file size).
